--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,9 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set environment variables\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "os.environ['OPENAI_API_KEY'] = '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'\n",
+    "os.environ['IMAP_SERVER'] = 'imap.gmail.com'\n",
+    "os.environ['IMAP_USER'] = 'hello@whitsundayboho.com'\n",
+    "os.environ['IMAP_PASSWORD'] = 'mztrzhsklabxxoqd'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "llm = OpenAI(model_name='text-davinci-003', \n",
+    "             temperature=0.9, \n",
+    "             max_tokens = 256)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from imap_tools import MailBox, AND\n",
+    "\n",
+    "\n",
+    "# Get your IMAP information from environment variables\n",
+    "IMAP_SERVER = os.environ.get('IMAP_SERVER')\n",
+    "IMAP_USER = os.environ.get('IMAP_USER')\n",
+    "IMAP_PASSWORD = os.environ.get('IMAP_PASSWORD')\n",
+    "\n",
+    "# Create a mailbox instance\n",
+    "mailbox = MailBox(IMAP_SERVER)\n",
+    "\n",
+    "# Login to the mailbox\n",
+    "mailbox.login(IMAP_USER, IMAP_PASSWORD)\n",
+    "\n",
+    "# Fetch emails, store them in a list, and sort them by date in descending order\n",
+    "emails = sorted(list(mailbox.fetch()), key=lambda email: email.date, reverse=True)\n",
+    "\n",
+    "# Now you can use the sorted emails list and enumerate over it\n",
+    "for index, msg in enumerate(emails):\n",
+    "    subject = msg.subject\n",
+    "    print(f'[{index}] - {subject}')\n",
+    "\n",
+    "# Don't forget to logout when you're done\n",
+    "mailbox.logout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "target_email = emails[3]\n",
+    "\n",
+    "soup = BeautifulSoup(target_email.html, features=\"html.parser\")\n",
+    "\n",
+    "print(target_email.text)\n",
+    "print(soup.get_text())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'console' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m console\u001b[39m.\u001b[39mlog(\u001b[39m\"\u001b[39m\u001b[39mHello World\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'console' is not defined"
+     ]
+    }
+   ],
    "source": []
   }
  ],
@@ -15,8 +108,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
